# sistema-gerenciamento-back

./: .gitignore  main.py  pyproject.toml
src/: models.py
src/google_utils/: utils.py
src/pool/: models.py  pool.py
src/routes/: cargos.py  categorias.py  login.py  produtos.py  users.py  vendas.py
